fixed spacing me section

--- a/004_single-page-design-portfolio/styles/_maingrid.scss
+++ b/004_single-page-design-portfolio/styles/_maingrid.scss
@@ -1,7 +1,7 @@
 @import "./vars.scss";
 
 .grid-section {
-  margin-bottom: 5.5rem;
+  margin-bottom: 8.5rem;
 }
 
 .grid-container {
