--- a/004_single-page-design-portfolio/styles/style.css
+++ b/004_single-page-design-portfolio/styles/style.css
@@ -209,7 +209,7 @@ header p {
 }
 
 .grid-section {
-  margin-bottom: 5.5rem;
+  margin-bottom: 8.5rem;
 }
 
 .grid-container {
